<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group>

        <item
            android:id="@+id/menu_setI2CSlave"
            android:icon="@drawable/nxp_color"
            android:title="@string/menu_setI2CSlave"
            android:titleCondensed="@string/menu_setI2CSlave"/>
        <item
            android:id="@+id/menu_setI2CMaster"
            android:icon="@drawable/nxp_color"
            android:title="@string/menu_setI2CMaster"
            android:titleCondensed="@string/menu_setI2CMaster"/>
        <item
            android:id="@+id/menu_setGPIOPWM"
            android:icon="@drawable/nxp_color"
            android:title="@string/menu_setGPIOPWM"
            android:titleCondensed="@string/menu_setGPIOPWM"/>
        <item
            android:id="@+id/menu_getUseCaseConfig"
            android:icon="@drawable/nxp_color"
            android:title="@string/menu_getUseCaseConfig"
            android:titleCondensed="@string/menu_getUseCaseConfig"/>
    </group>
</menu>
