<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:paddingTop="@dimen/pairing_list_entry_horizontal_margin"
    android:paddingBottom="@dimen/pairing_list_entry_horizontal_margin">

    <LinearLayout
        android:id="@+id/alm_conf_00"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginTop="5dp"
        android:background="@drawable/custom_border"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                style="@style/TextAppDevice"
                android:layout_width="match_parent"
                android:gravity="center_horizontal"
                android:text="@string/ALM_CONF_00"
                android:textColor="@color/primary_text" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/rx_res" />

            <Spinner
                android:id="@+id/spinner_rx_res"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:focusable="false" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/field_thresh" />

            <Spinner
                android:id="@+id/spinner_field_thresh"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:focusable="false" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/tuning_top" />

            <Spinner
                android:id="@+id/spinner_tuning_top"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:focusable="false" />

        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/alm_conf_01"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/alm_conf_00"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginTop="5dp"
        android:background="@drawable/custom_border"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                style="@style/TextAppDevice"
                android:layout_width="match_parent"
                android:gravity="center_horizontal"
                android:text="@string/ALM_CONF_01"
                android:textColor="@color/primary_text" />

            <RadioButton
                android:id="@+id/radio_enable_phase_shift"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/enable_phase_shift" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/static_phase_offset" />

            <EditText
                android:id="@+id/phaseOffsetRead"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/enable_res" />

            <Spinner
                android:id="@+id/spinner_enable_res"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:focusable="false" />
        </LinearLayout>
            </LinearLayout>

    <LinearLayout
        android:id="@+id/alm_conf_02"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/alm_conf_01"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginTop="5dp"
        android:background="@drawable/custom_border"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_weight="1"
            android:orientation="vertical">
            <TextView
                style="@style/TextAppDevice"
                android:layout_width="match_parent"
                android:gravity="center_horizontal"
                android:text="@string/ALM_CONF_02"
                android:textColor="@color/primary_text" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/tx_res" />

            <Spinner
                android:id="@+id/spinner_tx_res"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:focusable="false" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/damping" />

            <EditText
                android:id="@+id/dampingRead"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/alm_conf_03"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/alm_conf_02"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginTop="5dp"
        android:background="@drawable/custom_border"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_weight="1"
            android:orientation="vertical">
            <TextView
                style="@style/TextAppDevice"
                android:layout_width="match_parent"
                android:gravity="center_horizontal"
                android:text="@string/ALM_CONF_03"
                android:textColor="@color/primary_text" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/pll_delay" />

            <EditText
                android:id="@+id/pll_delayRead"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/clamp" />

            <EditText
                android:id="@+id/clampRead"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />


        </LinearLayout>
    </LinearLayout>

</RelativeLayout>
