<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:paddingTop="@dimen/pairing_list_entry_horizontal_margin"
    android:paddingBottom="@dimen/pairing_list_entry_horizontal_margin">

    <LinearLayout
        android:id="@+id/linearLayout_0"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginTop="5dp"
        android:background="@drawable/custom_border"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/gpio_icon_0"
            android:layout_width="138dp"
            android:layout_height="75dp"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:adjustViewBounds="true"
            android:contentDescription="gpio_image"
            android:src="@drawable/light_off"
            tools:ignore="HardcodedText" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                style="@style/TextAppDevice"
                android:layout_width="match_parent"
                android:gravity="center_horizontal"
                android:text="@string/channel_0_gpio"
                android:textColor="@color/primary_text" />

            <TextView
                style="@style/TextAppDevice"
                android:text="@string/gpio_direction_output" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/gpio_slew_rate" />

            <Spinner
                android:id="@+id/spinner_slew_rate_0"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:focusable="false" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/gpio_pad_config" />

            <Spinner
                android:id="@+id/spinner_pad_config_0"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:focusable="false" />

            <Button
                android:id="@+id/clearGPIOOutput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/button_shape"
                android:text="@string/gpio_output_clear"
                android:textColor="#FFFFFF" />

        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout_1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/linearLayout_0"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginTop="5dp"
        android:background="@drawable/custom_border"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/gpio_icon_1"
            android:layout_width="138dp"
            android:layout_height="75dp"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:adjustViewBounds="true"
            android:contentDescription="gpio_image"
            android:src="@drawable/unpressed_button"
            tools:ignore="HardcodedText" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                style="@style/TextAppDevice"
                android:layout_width="match_parent"
                android:gravity="center_horizontal"
                android:text="@string/channel_1_gpio"
                android:textColor="@color/primary_text" />

            <TextView
                style="@style/TextAppDevice"
                android:text="@string/gpio_direction_input" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/gpio_slew_rate" />

            <Spinner
                android:id="@+id/spinner_slew_rate_1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:focusable="false" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/gpio_pad_config" />

            <Spinner
                android:id="@+id/spinner_pad_config_1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:focusable="false" />

            <Button
                android:id="@+id/checkGPIOInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/button_shape"
                android:text="@string/gpio_input_check"
                android:textColor="#FFFFFF" />

        </LinearLayout>
    </LinearLayout>

</RelativeLayout>