<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="nxp.activentag5i2c.activities.MachineMenuActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:paddingTop="20dp"
        android:gravity="center">

        <Button
            android:id="@+id/button_machine_info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:padding="20dp"
            android:background="@drawable/button_shape"
            android:text="@string/machine_info"
            android:textSize="18sp"
            android:textColor="#FFFFFF"
            android:enabled="false"
            android:alpha="0.5" />

        <Button
            android:id="@+id/button_machine_setup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:padding="20dp"
            android:background="@drawable/button_shape"
            android:text="@string/machine_setup"
            android:textSize="18sp"
            android:textColor="#FFFFFF" />

        <Button
            android:id="@+id/button_vend_setup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:padding="20dp"
            android:background="@drawable/button_shape"
            android:text="@string/vend_setup"
            android:textSize="18sp"
            android:textColor="#FFFFFF"
            android:enabled="false"
            android:alpha="0.5" />

        <Button
            android:id="@+id/button_service_menu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:padding="20dp"
            android:background="@drawable/button_shape"
            android:text="@string/service_menu"
            android:textSize="18sp"
            android:textColor="#FFFFFF"
            android:enabled="false"
            android:alpha="0.5" />

    </LinearLayout>

    <ImageView
        android:id="@+id/imageViewNXP"
        android:layout_width="162dp"
        android:layout_height="135dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="12dp"
        app:srcCompat="@drawable/whirlpool_logo"
        android:contentDescription="Whirlpool Logo" />

</RelativeLayout>